--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -30,55 +30,62 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnCount="2"
-        android:rowCount="4">
+        android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_privacy_tip_white_24dp"
+            android:drawableTop="@drawable/ic_privacy_tip_white_24dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:text="@string/data_privacy"
             />
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_notifications_white_24dp"
+            android:drawableTop="@drawable/ic_notifications_white_24dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:text="@string/notifications"
             />
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_help_white_24dp"
+            android:drawableTop="@drawable/ic_help_white_24dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:text="@string/help"
             />
 
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_reviews_white_24dp"
+            android:drawableTop="@drawable/ic_reviews_white_24dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:text="@string/rate_us"
             />
 
-
         <com.google.android.material.button.MaterialButton
-            app:icon="@drawable/ic_perm_contact_calendar_white_24dp"
+            android:drawableTop="@drawable/ic_perm_contact_calendar_white_24dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:text="@string/contact"
             />
-
 
     </GridLayout>
 
