--- a/app/src/main/res/layout/product_profile.xml
+++ b/app/src/main/res/layout/product_profile.xml
@@ -21,6 +21,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp">
 
+            <TextView
+                android:id="@+id/p_profile_hiddenID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:visibility="invisible" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
