--- a/app/src/main/res/layout/product_profile.xml
+++ b/app/src/main/res/layout/product_profile.xml
@@ -28,6 +28,13 @@
                 android:text="TextView"
                 android:visibility="invisible" />
 
+            <TextView
+                android:id="@+id/p_profile_hiddenRes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:visibility="invisible" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
